Prefer Charset constants to having to lookup the charset each time by its string identifier